cmake_minimum_required(VERSION 3.23)
project(LeetcodeC C)

set(CMAKE_C_STANDARD 99)

add_executable(LeetcodeC main.c)
add_executable(lc0001 lc0001.c)
add_executable(lc0002 lc0002.c)
add_executable(lc0003 lc0003.c)
add_executable(test test_map.c)
add_executable(test_stack test_stack.c)
add_executable(test_list test_list.c)
add_executable(test_heap test_heap.c)
add_executable(lc0200_2 lc0200_2.c)